main.css
body {
  background-color: rgb(238, 238, 238);
  font-family: "Arimo";
  padding: 20px;
}

h1 {
  text-align: center;
  font-size: xx-large;
}

h2 {
  margin-left: 10px;
}

h3 {
  margin-left: 10px;
}

p {
  margin: 25px 100px 25px 100px;
}

table, th, td {
  border: 1px solid black;
  margin-left: 40px;
  padding: 5px
}

table {
  border-collapse: collapse;
  border: 2px solid #6DA6A5;
  background-color: #94F2F0;
  box-shadow: 5px 10px rgba(0, 0, 0, 0.329);
}

ul {
  margin-left: 20px;
}

#background {
  margin: 0px auto;
  padding: 20px;
  background-color: #F3ADE3;
  border: 2px solid #A66597;
  max-width: 1220px;
  min-width: 740px;
}

#midbox {
  margin: 0px auto;
  padding: 10px 20px;
  background-color: #F2EBC4;
  border: 2px solid #A66597;
  box-shadow: 5px 10px rgba(0, 0, 0, 0.329);
  max-width: 1200px;
  min-width: 700px;
}

#experience {
  margin-left: 40px;
  margin-bottom: 20px;
  display:inline-block;
  padding: 10px 20px 10px 10px;
  border: 2px solid #6DA6A5;
  background-color: #94F2F0;
  box-shadow: 5px 10px rgba(0, 0, 0, 0.329);
}

#alignbox{
  margin: 0px auto;
  max-width: 800px;
}

#mainimg {
  border: 2px solid black;
  margin: 20px 20px 20px 20px;
  display: block;
  margin-left: auto;
  margin-right: auto;
  object-fit: cover;
}

#logo{
  position: absolute;
  top: 0px;
  left: 0;
  width: 80px;
  min-width: 80px;
  height: 38px;
  min-height: 38px;
  opacity: 0.5;
}

#arcade {
  display: inline-block;
}

